# cjieba

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c
include/: cjieba.h  cjiebaType.h
src/: CMakeLists.txt  cjieba.c  cutBase.c  cutBase.h  prefixDict.c  prefixDict.h
src/common/: CMakeLists.txt  base.h  bloomFilter.c  bloomFilter.h  dynamicArray.c  dynamicArray.h  easyHash.c  easyHash.h  log.c  log.h  unicode.c  unicode.h
